# ray-marching

./: CMakeLists.txt
include/: Object.h  World.h  includes.h  vec3.h
src/: main.cpp  vec3.cpp
